[package]
name = "valensas-actuator"
version = "0.2.0"
edition = "2021"
description = "A library that provides Prometheus metrics collection capabilities for Rocket applications."
license = "MIT"
repository = "https://github.com/Valensas/rust-actuator"

[dependencies]
prometheus = "0.13.3"
tonic = { version = "0.9.2", optional = true }
tower = { version = "0.4.13", optional = true }

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[features]
grpc = ["dep:tonic", "dep:tower"]
