[package]
name = "valensas-actuator"
version = "0.2.0"
edition = "2021"
description = "A library that provides Prometheus metrics collection capabilities for Rocket applications."
license = "MIT"
repository = "https://github.com/Valensas/rust-actuator"

[dependencies]
async-trait = "0.1.73"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
log = "0.4.20"

# Optional dependencies
tonic = { version = "0.9.2", optional = true }
tonic-health = { version = "0.9.2", optional = true }
prometheus = { version = "0.13.3", optional = true }
tower = { version = "0.4.13", optional = true }
serde = { version = "1.0.185", optional = true }
diesel = { version = "2.1.0", optional = true }
futures = { version = "0.3.28", optional = true }

[features]
health = ["dep:serde", "dep:futures"]
health-tonic = ["health", "dep:tonic", "dep:tonic-health"]
health-diesel = ["health", "dep:diesel"]
prometheus-rocket = ["dep:prometheus"]
prometheus-tonic = ["prometheus-rocket", "dep:tonic", "dep:tower"]

[[example]]
name = "health"
required-features = ["health", "health-diesel"]

[[example]]
name = "prometheus"
required-features = ["prometheus-rocket"]

[[example]]
name = "prometheus_tonic"
required-features = ["prometheus-rocket", "prometheus-tonic"]

# Dependencies for examples
[dev-dependencies]
tokio = "1.32.0"
tonic-health = "0.9.2"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
